<resources>
    <string name="app_name">CTRL+STYLE</string>
    <string name="descriptionFood">Meaty portobello mushrooms make for the perfect vegetarian burger</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="button_sign_in">Sign in</string>
    <string name="button_sign_up">Sign up</string>
    <string name="button_send">Send</string>
    <string name="text_forgot_password">Forgot password?</string>
    <string name="text_signin_message">Hello, sign in to your account</string>
    <string name="text_signin_social_media">Or Sign in using social media</string>
    <string name="text_signup_social_media">Or Sign up using social media</string>
    <string name="text_signin_signup">Don\'t have an account? <b>Sign up</b></string>
    <string name="text_signup_terms">By signing up, you agree to our <b>terms and conditions</b></string>
    <string name="text_signup_message">Hello, let\'s set up your account</string>

    <string name="text_forgot_password_title">Forgot password? No worries</string>
    <string name="text_forgot_password_message">We will send you a link to reset your password</string>

    <string name="hint_email">Enter your email</string>
    <string name="hint_phone">Enter your phone number</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="about_title">About Our App</string>
    <string name="about_description">This app helps users browse products, track orders, and manage their shopping experience seamlessly.</string>
    <string name="product_name">Product Name</string>
    <string name="initial_price">$0.00</string>
    <string name="orders_menu">View Orders</string>
    <string name="about_menu">About</string>
    <string name="recently_viewed_button">Recently Viewed</string>
    <string name="users_list_button">Users List</string>    <string name="content_back">Back</string>
    <string name="text_signup_heading">Create Account</string>
    <string name="text_signup_subheading">Please fill in the details below.</string>
    <string name="text_signup_signin">Already have an account? <b> Sign in</b></string>



</resources>